fix(banner): fixed spacing between icon and content

--- a/packages/Banner/src/Banner.scss
+++ b/packages/Banner/src/Banner.scss
@@ -67,7 +67,7 @@ $focus: var(--focus, #6096e6bf);
     .icon {
         flex: 1 0;
         max-width: 32px;
-        padding-right: 16px;
+        margin-right: 16px;
     }
     .content {
         flex: 1;
